kubernetes/django/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: django
  template:
    metadata:
      labels:
        pod: django
    spec:
      containers:
        - name: django
          image: wischlabs/locality_finder:latest
          ports:
            - containerPort: 8000
