kubernetes/django/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: django-service
spec:
  selector:
    pod: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
