kubernetes/django/ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-cluster
    kubernetes.io/ingress.class: nginx
  name: django-ingress
  namespace: django
spec:
  rules:
  - host: locality-finder.sh4ke.rocks
    http:
      paths:
      - backend:
          serviceName: django-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - locality-finder.sh4ke.rocks
    secretName: django-tls
